k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edyra-backend-svc
spec:
  selector:
    app: edyra-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: edyra-frontend-svc
spec:
  selector:
    app: edyra-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
