k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edyra-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - edyra.com
    - api.edyra.com
    secretName: edyra-tls-secret
  rules:
  - host: edyra.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: edyra-frontend-svc
            port:
              number: 80
  - host: api.edyra.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: edyra-backend-svc
            port:
              number: 5000
